tests/baselines/reference/superCallBeforeThisAccessing6.errors.txt
superCallBeforeThisAccessing6.ts(2,17): error TS7006: Parameter 'c' implicitly has an 'any' type.
superCallBeforeThisAccessing6.ts(5,13): error TS7008: Member '_t' implicitly has an 'any' type.
superCallBeforeThisAccessing6.ts(7,15): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.


==== superCallBeforeThisAccessing6.ts (3 errors) ====
    class Base {
        constructor(c) { }
                    ~
!!! error TS7006: Parameter 'c' implicitly has an 'any' type.
    }
    class D extends Base {
        private _t;
                ~~
!!! error TS7008: Member '_t' implicitly has an 'any' type.
        constructor() {
            super(this); 
                  ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
        }
    }
    